word wrapping fixes

--- a/widget/css/widget.app.css
+++ b/widget/css/widget.app.css
@@ -201,6 +201,9 @@ p:empty{
 .people-info.main-header .btn-primary{
   margin-left: .75rem;
 }
+.layout1 .main-header{
+  word-break: break-word;
+}
 /* End Detail Item 1 ////////////////////////////////////////////////////////////////////////////// */
 
 /* Start Detail Item 2 ////////////////////////////////////////////////////////////////////////////// */
